provider application page updated

--- a/app/views/v13/provider/account/application-employer-reviewed-interviewing.html
+++ b/app/views/v13/provider/account/application-employer-reviewed-interviewing.html
@@ -19,12 +19,12 @@ Manage apprentices
 
 
     <section>
-      <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">
+      <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
         Keith Stewart
       </h1>
-      <div class="govuk-!-margin-bottom-6">
-        <span class="govuk-!-font-weight-bold">Application ID: </span>678CFR0
-      </div>
+
+      <p class="govuk-body-l">Application ID: 678CFR0</p>
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
