--- a/app/views/v13/provider/account/application-employer-reviewed-no.html
+++ b/app/views/v13/provider/account/application-employer-reviewed-no.html
@@ -17,14 +17,13 @@ Manage apprentices
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-
     <section>
-      <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">
+      <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
         Judy Ward
       </h1>
-      <div class="govuk-!-margin-bottom-6">
-        <span class="govuk-!-font-weight-bold">Application ID: </span>897DW5T
-      </div>
+
+      <p class="govuk-body-l">Application ID: 897DW5T</p>
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
@@ -36,6 +35,7 @@ Manage apprentices
         </p>
       </div>
     </section>
+
 
 <!-- ABOUT YOU -->
     <section>
