--- a/app/views/v13/provider/view/6a-share-applications.html
+++ b/app/views/v13/provider/view/6a-share-applications.html
@@ -20,8 +20,12 @@ Manage vacancy
     
         
         <p class="govuk-body" >
-          Select the applications you would like to share with <b>Gloucestershire Health and Care NHS Foundation Trust</b>. These applications will be shared anonymously.
+          Select the applications you want to share with <b>Gloucestershire Health and Care NHS Foundation Trust</b>. 
         </p>
+
+        <div class="govuk-inset-text">
+          The employer will be shown an anonymised version of each application with the applicant's name removed.
+        </div>
 
         <br>
   
