--- a/app/views/v13/provider/view/6b-check-share.html
+++ b/app/views/v13/provider/view/6b-check-share.html
@@ -20,7 +20,7 @@ Manage vacancy
 
   <!-- list START       -->
         <p class="govuk-body" >
-          These applications will be shared anonymously with <b>Gloucestershire Health and Care NHS Foundation Trust</b> to view in their Apprenticeship service account:
+          <b>Gloucestershire Health and Care NHS Foundation Trust</b> will be sent anonymised versions of these applications:
         </p>
 
         <div style="background-color: #f3f2f1; padding: 15px;">
@@ -60,6 +60,9 @@ Manage vacancy
                 <label class="govuk-label govuk-radios__label" for="share_applications_yes">
                   Yes, share these applications with employer
                 </label>
+                <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                  Applications will be sent to the employer's apprenticeship service account for review.
+                </div>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_no" name="share_applications" type="radio" value="no">
