--- a/app/views/v13/provider/account/application-new.html
+++ b/app/views/v13/provider/account/application-new.html
@@ -18,7 +18,7 @@ Manage apprentices
   <div class="govuk-grid-column-two-thirds">
 
 <!-- ORIGINAL -->
-    <section>
+    <!-- <section>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">
         Keith Stewart
       </h1>
@@ -35,11 +35,11 @@ Manage apprentices
           <br> <a href="mailto:faizal.dawood@domainname.co.uk">keith.stewart@domainname.co.uk</a>
         </p>
       </div>
-    </section>
+    </section> -->
 
 
 <!-- OPTION 1 -->
-    <!-- <section>
+    <section>
       <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
         Keith Stewart
@@ -56,7 +56,7 @@ Manage apprentices
           <br> <a href="mailto:faizal.dawood@domainname.co.uk">keith.stewart@domainname.co.uk</a>
         </p>
       </div>
-    </section> -->
+    </section>
 
 
 <!-- OPTION 2 -->
@@ -226,8 +226,11 @@ Manage apprentices
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="application" name="application" type="radio" value="review">
                 <label class="govuk-label govuk-radios__label" for="application">
-                  Review
+                  Give 'review' status
                 </label>
+                <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                 The applicant and employer will not be notified.
+                </div>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
                 <div class="govuk-form-group">
@@ -243,6 +246,9 @@ Manage apprentices
                 <label class="govuk-label govuk-radios__label" for="application-2">
                   Share with employer
                 </label>
+                <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
+                  Share an anonymised version of this application with the employer to review.
+                </div>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-2">
                 <div class="govuk-form-group">
@@ -255,8 +261,11 @@ Manage apprentices
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="application-3" name="application" type="radio" value="shortlist">
                 <label class="govuk-label govuk-radios__label" for="application-3">
-                  Interview with employer
+                  Give 'interviewing' status
                 </label>
+                <div id="sign-in-3-item-hint" class="govuk-hint govuk-radios__hint">
+                  The applicant and employer will not be notified.
+                </div>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-3">
                 <div class="govuk-form-group">
@@ -271,45 +280,30 @@ Manage apprentices
                 <label class="govuk-label govuk-radios__label" for="application-4">
                   Make successful
                 </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-4">
-                <div class="govuk-form-group">
-                  <div id="sign-in-hint" class="govuk-hint">                    
-                    This will send a message to the applicant to let them know they have been successful.
-                  </div>
+                <div id="sign-in-4-item-hint" class="govuk-hint govuk-radios__hint">
+                  Notify the applicant that they're being offered the apprenticeship.
                 </div>
               </div>
+  
 
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="application-5" name="application" type="radio" value="unsuccessful" data-aria-controls="conditional-contact-5">
                 <label class="govuk-label govuk-radios__label" for="application-4">
                   Make unsuccessful
                 </label>
-              </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden govuk-character-count" id="conditional-contact-5" data-module="govuk-character-count" data-maxwords="200">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-unsuccessful">
-                    <b>Feedback</b>
-                  </label>
-                  <div id="sign-in-hint" class="govuk-hint">
-                    Explain why the application has been unsuccessful, your comments will be sent to the applicant.
-                  </div>
-                  <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="contact-by-unsuccessful" rows="8" aria-describedby="word-count-info"></textarea>                
-                </div>
-                <div id="word-count-info" class="govuk-hint govuk-character-count__message">
-                  You can enter up to 200 words
+                <div id="sign-in-4-item-hint" class="govuk-hint govuk-radios__hint">
+                  Notify the applicant that they aren't successful and give them feedback.
                 </div>
               </div>
 
-
-            </div>
+    
           </fieldset>
         </div>
               
 <!-- BUTTONS -->
       <div class="govuk-button-group">
         <button class="govuk-button" data-module="govuk-button">
-          Save
+          Continue
         </button>
       
         <a class="govuk-link" href="#">Cancel</a>
