--- a/app/views/v13/provider/view/3c-manage-applications-shared.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shared.html
@@ -17,12 +17,12 @@ Manage vacancy
     <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
       <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Success
+          Done
         </h2>
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Keith Stewart shared anonymously to employer's Apprenticeship service account
+          Keith Stewart shared to employer's apprenticeship service account.
         </h3>
       </div>
     </div>
