--- a/app/views/v13/provider/view/3c-manage-applications-unsuccessful-multiple.html
+++ b/app/views/v13/provider/view/3c-manage-applications-unsuccessful-multiple.html
@@ -18,13 +18,16 @@ Manage vacancy
     <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
       <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Success
+          Done
         </h2>
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Applications have been made unsuccessful
+          Multiple applications made successful.
         </h3>
+        <p>
+          A notification has been sent to each applicant.
+        </p>
       </div>
     </div>
 
