--- a/app/views/v13/provider/view/7a-check-successful.html
+++ b/app/views/v13/provider/view/7a-check-successful.html
@@ -55,7 +55,7 @@ Manage vacancy
         }) }}
 
  <button class="govuk-button" data-module="govuk-button">
-  Continue
+  Confirm
 </button>
 
 </form>
