--- a/app/views/v13/provider/view/8c-check-multiple-unsuccessful.html
+++ b/app/views/v13/provider/view/8c-check-multiple-unsuccessful.html
@@ -64,13 +64,13 @@ Manage vacancy
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_yes" name="share_applications" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="share_applications_yes">
-                  Yes, notify these applicants they are unsuccessful
+                  Yes, make these applicants unsuccessful and notify them
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_no" name="share_applications" type="radio" value="no">
                 <label class="govuk-label govuk-radios__label" for="share_applications_no">
-                  No, don't notify these applicants they are unsuccessful
+                  No, don't make these applicants unsuccessful
                 </label>
               </div>
             </div>
